Implemented family tree (Balkan)